welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: not found: type x
var NbB : x=0
          ^